--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>...Piercing studio</title>
-    <link rel="stylesheet" href="index_just.css">
+    <link rel="stylesheet" href="original.css">
 </head>
 <body>
     <div class="whole_body">
